thêm tracker